@@ -7,6 +7,7 @@
 * [Sec 3044] Spoofed server packets are partially processed.  HStenn.
 * [Sec 3045] Bad authentication demobilizes ephemeral associations. JPerlinger.
 * [Sec 3046] CRYPTO_NAK crash.  stenn@ntp.org
+* [Bug 2998] sntp/tests/packetProcessing.c broken without openssl. JPerlinger
 * [Bug 3038] NTP fails to build in VS2015. perlinger@ntp.org
   - provide build environment
   - 'wint_t' and 'struct timespec' defined by VS2015
